updated task_1 and adding task 2